🐛 FIX: letter spacing button welcome

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -78,7 +78,7 @@ p {
 .connexion,
 .inscription {
   font-size: 0.8rem;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.5px;
   font-family: $subtitle;
   border-radius: 10px;
   padding: 12px 20px;
